# decompiler

./: CMakeLists.txt  Decompiler.cpp  Decompiler.h  README.md
AST/include/: AST.h  ASTDetail.h  ASTExpression.h
AST/src/: ASTBuild.cpp  ASTDetail.cpp  ASTExpression.cpp  ASTExpressionParser.cpp  ASTForLoop.cpp  ASTGraphUtils.cpp  ASTPrint.cpp  IRToStatements.cpp
ControlGraphFlow/include/: ControlGraphFlow.h
ControlGraphFlow/src/: ControlGraphFlow.cpp
Debug/include/: Debug.h
Debug/src/: Debug.cpp
Decompile/include/: Functions.h  Pipeline.h  Program.h  Show.h
Decompile/src/: Functions.cpp  Pipeline.cpp  Show.cpp
Dominators/include/: Dominators.h
Dominators/src/: Dominators.cpp
IR/: IR.h
IR/Data/: ConditionCode.h  IRCategory.h  IRInstruction.h  IROperand.h  IRProperties.h  IRType.h  InstructionInfo.h  Register.cpp  Register.h
IR/Lifter/src/: Lifter.cpp
IR/include/: IR.h  IRPatternRecognition.h  IRTypes.h
IR/include/types/: CallingConvention.h  IRCategory.h  IRInstruction.h  IRMemoryAddress.h  IROperand.h  IRProperties.h  IRType.h  InstructionInfo.h
IR/src/: IR.cpp  IRPatternRecognition.cpp
Optimizations/include/: CopyPropagation.h  Optimizations.h  RemoveUnusedGlobals.h
Optimizations/src/: CopyPropagation.cpp  Optimization.cpp  RemoveUnusedGlobals.cpp
Platform/include/: WindowsX64.h
SSA/include/: Names.h  PhiNodes.h  Renaming.h  SSA.h
SSA/src/: Names.cpp  PhiNodes.cpp  Renaming.cpp  SSA.cpp
Symbols/include/: SymbolTable.h
Symbols/src/: SymbolTable.cpp
TypeInference/include/: TypeInference.h
TypeInference/src/: TypeInference.cpp
Types/include/: DecompilerContext.h  DecompilerTypes.h
Variables/include/: GlobalVariableRecovery.h  StackFrame.h  StackVariableRecovery.h
Variables/src/: GlobalVariableRecovery.cpp  StackFrame.cpp  StackVariableRecovery.cpp
include/: AST.h  ControlGraphFlow.h  Debug.h  Decompiler.h  DecompilerContext.h  IRTypes.h  SSA.h
include/types/: ConditionCode.h  IRCategory.h  IRInstruction.h  IROperand.h  IRType.h
src/: Decompiler.cpp  IR.cpp  SSA.cpp
src/AST/: ASTBuild.cpp  ASTDetail.cpp  ASTDetail.h  ASTGraphUtils.cpp  ASTPrint.cpp
src/Debug/: Debug.cpp
src/Decompile/: Functions.cpp  Functions.h  Show.cpp  Show.h
src/SSA/src/: Names.cpp  PhiNodes.cpp  Renaming.cpp
tests/output/: test1_x64.txt  test2_x64.txt  test3_x64.txt  test4_x64.txt  test5_x64.txt  test6_x64.txt  test7_x64.txt  test8_x64.txt  test9_x64.txt
tests/sources/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
