file(GLOB_RECURSE DECOMPILER_SOURCES CONFIGURE_DEPENDS "Decompiler.cpp" "*/src/*.cpp")
file(GLOB_RECURSE DECOMPILER_HEADERS CONFIGURE_DEPENDS "Decompiler.h" "*/include/*.h")

add_library(DecompilerLib STATIC ${DECOMPILER_SOURCES} ${DECOMPILER_HEADERS})

target_include_directories(DecompilerLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(DecompilerLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/AST/include)
target_include_directories(DecompilerLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ControlGraphFlow/include)
target_include_directories(DecompilerLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Debug/include)
target_include_directories(DecompilerLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Decompile/include)
target_include_directories(DecompilerLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Dominators/include)
target_include_directories(DecompilerLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/IR/include)
target_include_directories(DecompilerLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/SSA/include)
target_include_directories(DecompilerLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Symbols/include)
target_include_directories(DecompilerLib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Types/include)
